@@ -1,4 +1,5 @@
 0.03
+ - Add screenshot of example app to doc.
  - Update copyright years.
 
 0.02 2023-06-27T01:50:29+02:00
